Bug 81948 - [BYT-M Regression]System unable resume from S3/S4
Summary: [BYT-M Regression]System unable resume from S3/S4
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: unspecified
Hardware: Other All
: high normal
Assignee: Imre Deak
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-07-31 07:47 UTC by Guo Jinxian
Modified: 2016-10-19 12:43 UTC (History)
2 users (show)

See Also:
i915 platform:
i915 features:


Attachments
fix mst hpd suspend (20.00 KB, application/x-tar)
2014-08-05 17:37 UTC, Imre Deak
no flags Details
dmesg (114.57 KB, text/plain)
2014-08-06 07:44 UTC, Guo Jinxian
no flags Details

Description Guo Jinxian 2014-07-31 07:47:51 UTC
==System Environment==
--------------------------
Regression: Yes. 
Good commit on -next-queued: 1cf0ba14740d96fbf6f58a201f000a34b74f4725

Non-working platforms: BYT-M

==kernel==
--------------------------
origin/drm-intel-nightly: c95053d599112ec3b8c27a632e3c1544558891a4(fails)
    drm-intel-nightly: 2014y-07m-30d-22h-36m-53s integration manifest
origin/drm-intel-next-queued: 5193109cd669c7990b043a7187548546c16f8af3(fails)
    drm/i915: Align intel_dsi*.c files a bit
origin/drm-intel-fixes: f4be89cecea437aaddd7700d05c6bdb5678041f7(works)
    drm/i915: Fix crash when failing to parse MIPI VBT

==Bug detailed description==
System unable resume from S3/S4


==Reproduce steps==
---------------------------- 
1. echo mem >/sys/power/state
2. Press power button
Comment 1 Imre Deak 2014-08-05 17:37:52 UTC
Created attachment 104089 [details]
fix mst hpd suspend

Could you try the attached 4 patches on latest -nightly?
Comment 2 Guo Jinxian 2014-08-06 07:44:31 UTC
Created attachment 104133 [details]
dmesg

(In reply to comment #1)
> Created attachment 104089 [details]
> fix mst hpd suspend
> 
> Could you try the attached 4 patches on latest -nightly?

S3/S4 works well withe these patches on latest -nightly(79e44bfa10063ee529140e88fdc401c4ce07d644)
Comment 3 Imre Deak 2014-08-19 16:23:33 UTC
The fix for this is merged now. Note that there are some WARNs remaining about eDP VDD state checking after resume, but those are independent and fixed by Ville's VDD locking fixes under review.
Comment 4 Guo Jinxian 2014-08-20 06:15:27 UTC
(In reply to comment #3)
> The fix for this is merged now. Note that there are some WARNs remaining
> about eDP VDD state checking after resume, but those are independent and
> fixed by Ville's VDD locking fixes under review.

Resume works well, but here has another two bugs about S3 and S4, which tracked by bug 82841 and bug 82842. Verify this one.
Comment 5 Jani Nikula 2014-08-22 13:26:20 UTC
Fixed by
commit 1a125d8a2c22b11741fc47d4ffcf7a5ffa044dd3
Author: Imre Deak <imre.deak@intel.com>
Date:   Mon Aug 18 14:42:46 2014 +0300

    drm/i915: don't try to retrain a DP link on an inactive CRTC
Comment 6 Jari Tahvanainen 2016-10-19 12:43:24 UTC
Closing verified+fixed.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.